# GLSDL

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.MIT  README.md  THIRD-PARTY-LICENSES  build-release.sh
include/GLSDL/: GLSDL.cpp  GLSDL.h  GLSDL_SDL_defs.h  GLSDL_pixels.h  GLSDL_render.cpp  GLSDL_render.h  GLSDL_video.cpp  GLSDL_video.h
include/GLSDL/z/: GLSDL_render_impl.cpp  GLSDL_render_impl.h  GLSDL_render_state.cpp  GLSDL_shader.cpp  GLSDL_shader.h
src/main/: Main.cpp  Main.h
